# product-eye

./: .env.example  .gitignore  README.md  crew_execution.log.txt  product_critique_report.md  pyproject.toml
output/: interview_transcript_novice.md  persona_navigation_report_novice.md
src/product_critiquer/: crew.py  main.py
src/product_critiquer/config/: README.md  agents.yaml  inputs.py  tasks.yaml
src/product_critiquer/config/examples/: hackernews_config.yaml  portfolio_config.yaml  stackoverflow_config.yaml
src/product_critiquer/output_types/: __init__.py  final_report_output.py  interview_output.py  navigation_verification_output.py  persona_navigation_output.py  persona_research_output.py
src/product_critiquer/tools/: metrics_analyzer.py  persona_behavior.py  playwright_tools.py  report_generator.py
