[project]
name = "product_critiquer"
version = "0.1.0"
description = "product_critiquer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crewai[tools]==1.5.0",
    "langchain-community>=0.4.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
product_critiquer = "product_critiquer.main:run"
run_crew = "product_critiquer.main:run"
train = "product_critiquer.main:train"
replay = "product_critiquer.main:replay"
test = "product_critiquer.main:test"
run_with_trigger = "product_critiquer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
